--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,30 @@ figcaption {
     font-size:10x;  
 }
 
+form {
+    font: Arial;
+    font-size: 16px;
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-bottom: 10px;
+}
+
+form .row{
+    display: flex;
+    align-items: center;
+  }
+
+#message {
+    height: 250px;
+    width: 250px;
+}
+
+#submitbutton {
+    margin-left: 20px;
+}
+
+
 .end {
     font-style: italic;
     padding-bottom: 10px;
