--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ header {
     background-image: url('schmaits.github.io/images/Manchester Skyline.jpg');
     background-size: cover;
     color: #ffffff;
-    
+    height: 500px;
 }
 
 
